[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pangu-md"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistletoe>=1.5.1",
    "mistune>=3.2.0",
]

[project.scripts]
pangumd = "pangumd:cli"
pangufiles = "pangumd:cli"

[dependency-groups]
draft = [
    "marko>=2.2.2",
    "pangu>=4.0.6.1",
]
test = [
    "pytest>=9.0.2",
]

[tool.pytest]
minversion = "9.0"
python_functions = ["test_*"]
testpaths = [
    "tests",
]
