[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pangumd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marko>=2.2.2",
    "pangu>=4.0.6.1",
]

[project.scripts]
pangumd = "pangumd:cli"
pangufiles = "pangumd:cli"

[dependency-groups]
draft = [
    "marko>=2.2.2",
    "pangu>=4.0.6.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-icdiff>=0.9",
]
lint = [
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest]
minversion = "9.0"
python_functions = ["test_*"]
testpaths = [
    "tests",
]
